# Proyecto-Primer-Parcial-Competencia-de-Controladores-Reactivos-en-F1Tenth

./: README.md
install/: local_setup.sh  setup.sh
install/f1tenth_gym_ros/share/f1tenth_gym_ros/: package.sh
install/gap_follow_pkg/share/gap_follow_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml
install/my_gap_pkg/lib/my_gap_pkg/: gap_follower  lap_timer
install/my_gap_pkg/share/my_gap_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_gap_pkg/share/my_gap_pkg/launch/: dual_launch.launch.py
log/: latest_build
src/f1tenth_gym_ros/maps/: Budapest_map_modified.yaml
src/gap_follow_pkg/: setup.cfg  setup.py
src/gap_follow_pkg/gap_follow_pkg/: CMakeLists.txt
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/f1tenth_gym_ros/share/f1tenth_gym_ros/: package.sh
src/install/f1tenth_gym_ros/share/f1tenth_gym_ros/config/: sim.yaml
src/install/gap_follow_pkg/lib/gap_follow_pkg/: gap_follower  lap_timer
src/install/gap_follow_pkg/share/gap_follow_pkg/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/gap_follow_pkg/share/gap_follow_pkg/launch/: dual_launch.launch.py
src/log/: latest_build
