<?xml version="1.0"?>
<package format="3">
  <name>gap_follow_pkg</name>
  <version>0.0.0</version>
  <description>Follow-the-Gap controller + lap timer.</description>

  <maintainer email="jupazamo@todo.com">Jupazamo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- dependencias en tiempo de ejecución -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
EOF
